Styling: got rid of styles existing in bootstrap, replaced few constants by their BS4 alternatives

--- a/assets/scss/blog.scss
+++ b/assets/scss/blog.scss
@@ -110,10 +110,10 @@
   .comment-meta {
     margin: 0 0 0 90px;
     a {
-      color: $color-text;
+      color: $body-color;
     }
     a:hover {
-      color: $color-action-hover;
+      color: $primary;
     }
     .author {
       margin: 0 20px 0 0;
