--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -1,7 +1,7 @@
 .footer {
   background: #232323;
-  padding: 30px 0 0 0;
-  font-size: 12px;
+  padding: $spacer*2.5 0 0 0;
+  font-size: $font-size-sm;
   color: #999;
 
   a {
