--- a/assets/scss/portfolio.scss
+++ b/assets/scss/portfolio.scss
@@ -75,7 +75,7 @@
       text-align: left;
       font-size: 14px;
       font-family: $font-family-base;
-      color: $color-text;
+      color: $body-color;
       z-index: 3;
       font-weight: bold;
       text-transform: uppercase;
