--- a/assets/scss/typography.scss
+++ b/assets/scss/typography.scss
@@ -1,116 +1,14 @@
-h1, .h1 {
-  font-size: 52px;
-}
-
-h2, .h2 {
-  font-size: 36px;
-}
-
-h3, .h3 {
-  font-size: 28px;
-  margin: 20px 0 10px;
-}
-
-h4, .h4 {
-  font-size: 22px;
-  margin: 20px 0 10px;
-  line-height: 30px;
-}
-
-h5, .h5 {
-  font-size: 18px;
-  margin-bottom: 15px;
-}
-
-@media (max-width: 480px) {
-  h1, .h1 {
-    font-size: 42px;
-  }
-  h2, .h2 {
-    font-size: 26px;
-  }
-  h3, .h3 {
-    font-size: 22px;
-    margin: 20px 0 10px;
-  }
-  h4, .h4 {
-    font-size: 18px;
-    margin: 20px 0 10px;
-    line-height: 27px;
-  }
-  h5, .h5 {
-    font-size: 16px;
-    margin-bottom: 15px;
-  }
-}
-
-p {
-  margin: 0 0 20px 0;
-}
-
-p:last-child {
-  margin: 0;
-}
-
 blockquote {
   font-style: italic;
-  font-family: Georgia;
-  color: lighten($color-text, 40%);
-  margin: 30px 0 30px;
+  font-family: Georgia, "Times New Roman", serif;
+  color: lighten($body-color, 40%);
+  margin: 30px 0;
 }
 
 label {
-  color: #777;
+  color: $gray-600;
 }
 
 .thin {
-  font-weight: 300;
-}
-
-.text-muted {
-  color: lighten($color-text, 40%);
-}
-
-.breadcrumb {
-  background: none;
-  padding: 0;
-  margin: 30px 0 0px 0;
-}
-
-ul.list-spaces li {
-  margin-bottom: 10px;
-}
-
-a {
-  color: $color-links;
-}
-
-a:hover {
-  color: $color-links-hover;
-}
-
-hr {
-  border-top: 1px solid #ddd;
-}
-
-
-
-.jumbotron hr {
-  border-top: 1px solid #d3d3d3;
-}
-
-.jumbotron.invert hr {
-  border-top: 1px solid #666;
-}
-
-.color-action {
-  color: $color-action;
-}
-
-.color-accent {
-  color: $color-accent;
-}
-
-.color-default {
-  color: $color-text;
+  @extend .font-weight-light;
 }
