--- a/assets/scss/pricing.scss
+++ b/assets/scss/pricing.scss
@@ -1,7 +1,7 @@
 .section-pricing {
   .price-plan {
     position: relative;
-    background: $bg-invert;
+    background: $dark;
     border-radius: $radius;
     &.most-popular {
       background: $primary;
