--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -12,7 +12,21 @@ p:last-child {
   margin-bottom: 0;
 }
 
+.jumbotron {
+  padding: 50px 0 60px;
+}
 
+.panel-box {
+  background: $bg-accent;
+  border-radius: $radius;
+  border: 0 none;
+  .panel-thumbnail {
+    border: 0 none;
+  }
+  .panel-thumbnail img {
+    border-radius: $radius $radius 0 0;
+  }
+}
 
 // ELEMENTOR
 .elementor-section {
